--- a/DONTCHECKTHESOUND/manifest.json
+++ b/DONTCHECKTHESOUND/manifest.json
@@ -1,19 +1,11 @@
 {
   "manifest_version": 3,
-  "name": "DONT CLICK THE SOUND",
+  "name": "DONT CHECK THE SOUND",
   "version": "1.0",
-  "description": "Such a W Script by me",
+  "description": "Best extension that keeps you from clicking the sound! OH YEAH",
   "permissions": ["scripting", "tabs"],
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_idle"
-    }
-  ],
-  "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
-  }
+  "background": {
+    "service_worker": "background.js"
+  },
+  "host_permissions": ["<all_urls>"]
 }
