--- a/Touch Grass/manifest.json
+++ b/Touch Grass/manifest.json
@@ -1,14 +1,11 @@
 {
   "manifest_version": 3,
-  "name": "Touch Grass v1.0",
+  "name": "Touch Grass plz",
   "version": "1.0",
-  "description": "Go touch grass! A perfect extension for everything grass related!",
-  "permissions": ["scripting"],
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "css": ["style.css"]
-    }
-  ]
+  "description": "Best extension I've ever made!",
+  "permissions": ["scripting", "tabs"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "host_permissions": ["<all_urls>"]
 }
